# parakeetX

./: .dockerignore  .env.example  .mise.toml  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.cuda-legacy  README.md  compose.cpu.yaml  compose.cuda-legacy.yaml  compose.yaml  firstTry.plan  pyproject.toml
.github/workflows/: docker-images.yml
src/parakeetx_api_server/: __init__.py  auth.py  config.py  deps.py  log_filters.py  main.py
src/parakeetx_api_server/model_managers/: __init__.py  diarization_manager.py  idle_eviction.py  parakeet_manager.py
src/parakeetx_api_server/routers/: __init__.py  models.py  transcriptions.py  translations.py
src/parakeetx_api_server/services/: __init__.py  audio.py  response_formatters.py  speaker_assignment.py  transcription.py
tests/: conftest.py  test_auth.py  test_config.py  test_idle_eviction.py  test_integration_guards.py  test_log_filters.py  test_parakeet_manager.py  test_response_formatters.py  test_routes.py  test_speaker_assignment.py
